# virga

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DESIGN_SUMMARY.md  EXAMPLES.md  INDEX.md  QUICK_REFERENCE.md  README.md  TODO.md  server_example.rs  test_client.rs  use-xtransport  use-yamux
example/: Cargo.toml  README.md  test_server.rs
example/client_test/: Cargo.toml
example/client_test/src/: main.rs
example/server_test/: Cargo.toml
example/server_test/src/: main.rs
src/: lib.rs
src/client/: client_async.rs  client_sync.rs  mod.rs
src/connection/: mod.rs
src/error/: mod.rs
src/server/: mod.rs  server_async.rs  server_sync.rs
src/transport/: mod.rs
src/transport/xtransport/: config.rs  error.rs  io.rs  mod.rs  protocol.rs  transport.rs
src/transport/xtransport_impl/: mod.rs  transfer_handler.rs
src/transport/yamux_impl/: mod.rs  transfer_handler.rs
test_refactor/: Cargo.toml
test_refactor/src/: main.rs
xtransport/: Cargo.toml
xtransport/examples/: shared_memory.rs
xtransport/src/: config.rs  error.rs  io.rs  lib.rs  protocol.rs  transport.rs
