[package]
name = "virga"
version = "0.1.0"
edition = "2024"
authors = [
    "Huangshijia <shijia727@outlook.com>",
]
license = "Apache-2.0"


[features]
default = ["use-xtransport"]     # 默认启用 xtransport 特性
use-yamux = ["yamux", "tokio", "tokio-util", "tokio-vsock", "futures"]
use-xtransport = ["vsock", "xtransport" ]


[dependencies]
env_logger = "0.11"
log = "0.4"

# features = yamux dependencies
yamux = { git = "https://github.com/libp2p/rust-yamux.git", optional = true }
tokio = { version = "1.32", features = ["full"], optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }
tokio-vsock = { version = "0.7.2", optional = true }
futures = { version = "0.3", optional = true }

# features = xtransport dependencies
vsock = { version = "0.5", optional = true }
xtransport = { git = "https://github.com/kylin-x-kernel/xtransfer.git", features = ["std"], optional = true }
