[package]
name = "virga"
version = "0.1.0"
edition = "2021"
authors = [
    "Huangshijia <shijia727@outlook.com>",
]
license = "Apache-2.0"

[workspace]
members = ["xtransport"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = [
    "Debin <luodeb@outlook.com>",
    "Huangshijia <shijia727@outlook.com>",
]


[features]
default = ["use-yamux"]     # 默认启用 xtransport 特性
use-yamux = ["yamux", "tokio", "tokio-util", "tokio-vsock", "futures"]
use-xtransport = ["vsock", "xtransport" ]


[dependencies]
env_logger = "0.11"
log = "0.4"

# features = yamux dependencies
yamux = { version = "0.13", optional = true }
tokio = { version = "1.32", features = ["full"], optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }
tokio-vsock = { version = "0.7.2", optional = true }
futures = { version = "0.3", optional = true }

# features = xtransport dependencies
vsock = { version = "0.5", optional = true }
xtransport = { path = "xtransport", features = ["std"], optional = true }
