[package]
name = "xtransport"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = [
    "Debin <luodeb@outlook.com>",
    "Huangshijia <shijia727@outlook.com>",
]
description = "A no_std compatible reliable transport protocol with fragmentation, retransmission, reordering and CRC32 checksum"

[features]
default = []
std = []

[dependencies]
log = { version = "0.4", default-features = false }
crc32fast = { version = "1.4", default-features = false }

[dev-dependencies]
shared_memory = "0.12"
env_logger = "0.11"
